tests/paczka1/small_fuzzy/65790140.err
Error in line 2: Fha4qCYMT A910 0,0
Error in line 3: A555 S728 21,3
Error in line 10: Fha4qCYMT S728 53,6
